@@ -19,9 +19,9 @@
 
 package diffmatchpatch;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -543,11 +543,11 @@ public class diff_match_patch {
       lineStart = lineEnd + 1;
 
       if (lineHash.containsKey(line)) {
-        chars.append(String.valueOf((char) (int) lineHash.get(line)));
+        chars.append((char) (int) lineHash.get(line));
       } else {
         lineArray.add(line);
         lineHash.put(line, lineArray.size() - 1);
-        chars.append(String.valueOf((char) (lineArray.size() - 1)));
+        chars.append((char) (lineArray.size() - 1));
       }
     }
     return chars.toString();
@@ -1434,13 +1434,8 @@ public class diff_match_patch {
     for (Diff aDiff : diffs) {
       switch (aDiff.operation) {
       case INSERT:
-        try {
-          text.append("+").append(URLEncoder.encode(aDiff.text, "UTF-8")
-                                            .replace('+', ' ')).append("\t");
-        } catch (UnsupportedEncodingException e) {
-          // Not likely on modern system.
-          throw new Error("This system does not support UTF-8.", e);
-        }
+        text.append("+").append(URLEncoder.encode(aDiff.text, StandardCharsets.UTF_8)
+                                          .replace('+', ' ')).append("\t");
         break;
       case DELETE:
         text.append("-").append(aDiff.text.length()).append("\t");
@@ -1486,10 +1481,7 @@ public class diff_match_patch {
         // decode would change all "+" to " "
         param = param.replace("+", "%2B");
         try {
-          param = URLDecoder.decode(param, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-          // Not likely on modern system.
-          throw new Error("This system does not support UTF-8.", e);
+          param = URLDecoder.decode(param, StandardCharsets.UTF_8);
         } catch (IllegalArgumentException e) {
           // Malformed URI sequence.
           throw new IllegalArgumentException(
@@ -1641,12 +1633,13 @@ public class diff_match_patch {
         } else {
           charMatch = s.get(text.charAt(j - 1));
         }
+        int itmp = ((rd[j + 1] << 1) | 1) & charMatch;
         if (d == 0) {
           // First pass: exact match.
-          rd[j] = ((rd[j + 1] << 1) | 1) & charMatch;
+          rd[j] = itmp;
         } else {
           // Subsequent passes: fuzzy match.
-          rd[j] = (((rd[j + 1] << 1) | 1) & charMatch)
+          rd[j] = itmp
               | (((last_rd[j + 1] | last_rd[j]) << 1) | 1) | last_rd[j + 1];
         }
         if ((rd[j] & matchmask) != 0) {
@@ -2030,7 +2023,7 @@ public class diff_match_patch {
     short paddingLength = this.Patch_Margin;
     StringBuilder nullPadding = new StringBuilder();
     for (short x = 1; x <= paddingLength; x++) {
-      nullPadding.append(String.valueOf((char) x));
+      nullPadding.append((char) x);
     }
 
     // Bump all the patches forward.
@@ -2261,10 +2254,7 @@ public class diff_match_patch {
         line = text.getFirst().substring(1);
         line = line.replace("+", "%2B");  // decode would change all "+" to " "
         try {
-          line = URLDecoder.decode(line, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-          // Not likely on modern system.
-          throw new Error("This system does not support UTF-8.", e);
+          line = URLDecoder.decode(line, StandardCharsets.UTF_8);
         } catch (IllegalArgumentException e) {
           // Malformed URI sequence.
           throw new IllegalArgumentException(
@@ -2422,13 +2412,8 @@ public class diff_match_patch {
           text.append(' ');
           break;
         }
-        try {
-          text.append(URLEncoder.encode(aDiff.text, "UTF-8").replace('+', ' '))
-              .append("\n");
-        } catch (UnsupportedEncodingException e) {
-          // Not likely on modern system.
-          throw new Error("This system does not support UTF-8.", e);
-        }
+        text.append(URLEncoder.encode(aDiff.text, StandardCharsets.UTF_8).replace('+', ' '))
+            .append("\n");
       }
       return unescapeForEncodeUriCompatability(text.toString());
     }
